--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "lightweight-charts": "^5.0.9",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.6",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
